<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.android.example.seminarmanager.ui.main.user.UserViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textColor="#2C2B2B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={viewModel.userName}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textColor="#2C2B2B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/first_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={viewModel.firstName}" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textColor="#2C2B2B"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/last_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@={viewModel.lastName}" />
        </LinearLayout>

        <Button
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="수정하기" />

        <TextView
            android:id="@+id/particpating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/participating_seminars"
            android:textColor="#638C9F"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paricipating_seminar_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:participating_seminars_enrolled="@{viewModel.user.participant.seminars}"
            tools:listitem="@layout/item_seminar_enrolled" />

        <TextView
            android:id="@+id/instructing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/instructing_seminars"
            android:textColor="#7B9A57"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/instructing_seminar_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:scrollbars="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:instructing_seminar_enrolled="@{viewModel.user.instructor.charge}"
            tools:listitem="@layout/item_seminar_enrolled" />

    </LinearLayout>

</layout>